# sigocr

./: .gitignore  Cargo.toml  README.md  biome.json  native.d.cts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
__test__/: sigocr.test.ts
__test__/bench/: extract.bench.ts
__test__/fixtures/: generate.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
src/: error.rs  lib.rs  types.rs
src/extract/: buffer.rs  detect.rs  file.rs  mod.rs  pdf.rs
src/layout/: mod.rs  paragraphs.rs  reading_order.rs  tables.rs
ts/: errors.ts  index.ts  sigocr.ts  types.ts
