[package]
name = "sigocr"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdf_oxide = "0.3"
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"
rayon = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
